--- a/views/bootstrap-demo.ejs
+++ b/views/bootstrap-demo.ejs
@@ -8,18 +8,71 @@
   </head>
   <body>
    
-    <h1 class="display-3  bg-info">This is the tutorial for buttons</h1>
+  <div class="container-lg my-5">
+    <h2 class="display-6">basic grid</h2>
+    <div class="row">
+      <div  class="col">
+        <div class="p-5 bg-primary text-light">col 1</div>
+      </div>
+      <div class="col">
+        <div class="p-5 bg-primary text-light">col 2</div>
+      </div>
+      <div class="col">
+        <div class="p-5 bg-primary text-light">col 3</div>
+      </div>
+    </div>
+  </div>
 
-    <h2 class="display-4">Basic Buttons</h2>
-    <button class="btn btn-primary">1st button</button>
-    <button class="btn btn-secondary">secondary button</button>
-    <button class="btn btn-info">info button</button>
-    <button class="btn btn-danger">danger button</button>
-    <button class="btn btn-dark">dark subtle button</button>
+  <div class="container-lg my-5">
+    <h2 class="display-6">column widths</h2>
+    <div class="row">
+      <div  class="col-2">
+        <div class="p-5 bg-primary text-light">col 1</div>
+      </div>
+      <div class="col-4">
+        <div class="p-5 bg-primary text-light">col 2</div>
+      </div>
+      <div class="col-4">
+        <div class="p-5 bg-primary text-light">col 3</div>
+      </div>
+      <div class="col-2">
+        <div class="p-5 bg-primary text-light">col 4</div>
+      </div>
+    </div>
+  </div>
 
-    <h2 class="display-4">Anchor Tag Buttons</h2>
+  <div class="container-lg my-5">
+    <h2 class="display-6">responsive column widths</h2>
+    <div class="row">
+      <div  class="col-sm-3 col-lg-2 mt-1">
+        <div class="p-5 bg-primary text-light">col 1</div>
+      </div>
+      <div class="col-sm-3 col-lg-4 mt-1">
+        <div class="p-5 bg-primary text-light">col 2</div>
+      </div>
+      <div class="col-sm-3 col-lg-4 mt-1">
+        <div class="p-5 bg-primary text-light">col 3</div>
+      </div>
+      <div class="col-sm-3 col-lg-2 mt-1">
+        <div class="p-5 bg-primary text-light">col 4</div>
+      </div>
+    </div>
+  </div>
 
-    <h2 class="display-4">Button Sizes</h2>
+  <div class="container-lg my-5">
+    <h2 class="display-6">justifying column widths</h2>
+    <div class="row justify-content-center">
+      <div class="col-md-3">
+        <div class="p-5 bg-secondary text-light">col 1</div>
+      </div>
+      <div class="col-md-3">
+        <div class="p-5 bg-secondary text-light">col 2</div>
+      </div>
+      <div class="col-md-3">
+        <div class="p-5 bg-secondary text-light">col 3</div>
+      </div>
+    </div>
+  </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
