--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,37 +5,26 @@
 
 <body>
     <%- include('./partials/nav.ejs') %>
-
-    <div class="attendance-list content">
-        <h2>All Attendance</h2>
-        <% if (attendance.length > 0) {%>
-        <table>
-            <thead>
-                <tr>
-                    <th>Date</th>
-                    <th>Name</th>
-                    <th>Time</th>
-                    <th>Comments</th>
-                </tr>
-            </thead>
-            <tbody>
-                
-                    <% attendance.forEach(element => { %>
-                        <tr>
-                            <td> <%= element.date %> </td>
-                            <td> <%= element.name %> </td>
-                            <td> <%= element.time %> </td>
-                            <td> <%= element.comments %> </td>
-                        </tr>
-                   <% }) %>
-               
-            </tbody>
-        </table>      
-        <% } else {%>
-            <p>No attendance recorded yet</p>
-        <% } %>
+<!--main image and intro text-->
+<section id="intro">
+    <div class="container-lg">
+        <div class="row justify-content-center align-item-center">
+            <div class="col-md-8 text-center text-md-start">
+                <h1>
+                    <div class="display-2">Salt and Light Church</div>
+                    <div class="display-6 text-muted">Winning Souls. Making Disciples</div>
+                </h1>
+                <p class="lead my-4 text-muted">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci voluptatem in qui?</p>
+                <a href="#" class="btn btn-secondary btn-lg">Join Us!</a>
+            </div>
+            <div class="col-md-4 text-center d-sm-none d-md-block">
+                <img class="img-fluid" src="/public/assets/SLCLogo_noText.png" alt="slc logo">
+            </div>
+        </div>
     </div>
+</section>
 
-    <%- include('./partials/footer.ejs') %>
+    <!-- <%- include('./partials/footer.ejs') %> -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
