--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,14 +1,29 @@
-<nav>
-    <div class="site-title">
-        <a href="/">
-            <h1>Attendance</h1>
-            <p>Monitoring Attendance</p>
-        </a>
+<nav class="navbar navbar-expand-md navbar-light">
+  <div class="container-xxl">
+     <img src="/public/assets/SLCLogo_noText.png" alt="slc logo" class="d-inline-block align-text-center" style="height: 5%; width: 5%; " />
+    <a href="#intro" class="navbar-brand">
+      <span class="fw-bold text-secondary"> SLC </span>
+    </a>
+    <!--toggle btn for mobile nav-->
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse justify-content-end align-center" id="main-nav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="/"> Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/person/people"> List of Members</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/about"> About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/person/add">New Member</a>
+        </li>
+      </ul>
     </div>
-    <ul>
-        <li><a href="/"> Home</a></li>
-        <li><a href="/sophia"> Sophia</a></li>
-        <li><a href="/about"> About</a></li>
-        <li><a href="/attendance/create">New Attendance</a></li>
-    </ul>
+  </div>
 </nav>
